macOS hotplug support
Handle runtime changes of default audio output device like
pairing Bluetooth headphones, plugging/unplugging 3.5mm jack,
changing Sound Output in Audio MIDI Setup, etc.

Tested on macOS 13.6 M1, 10.13.6 x86_64, 10.12.6 x86_64

Known issues:

 * There can be a race condition after plugging in the 3.5mm jack
   but before the External Headphones device is available.  Retrying
   the plug usually works.
 * ZoomAudioDevice does not play nicely.  It can be removed via CLI
   if you are not sharing programmatic audio.

--- a/src/Makefile.osx-M1
+++ b/src/Makefile.osx-M1
@@ -29,6 +29,8 @@ export BUILD_TOP=$(BASE_DIR)build/osx
 
 export PREFIX=${BUILD_TOP}
 
+export JIVE_LDFLAGS=-Wl,-framework,CoreAudio
+
 ARCHFLAGS=-arch $(ARCH)
 export CFLAGS=$(ARCHFLAGS) -I${PREFIX}/include -I${PREFIX}/include/SDL -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk -mmacosx-version-min=11.0
 export CXXFLAGS=$(ARCHFLAGS) -I${PREFIX}/include -I${PREFIX}/include/SDL -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk -mmacosx-version-min=11.0
